app/styles/views/team/_project.scss
$project-angles-text-color: $body-font-color;
$project-angle-background-color: $snow;
$project-angle-border-color: darken($project-angle-background-color, 5%);
$project-angle-border: 1px solid $project-angle-border-color;
$project-angle-heading-color: $charcoal;
$project-angle-section-padding: $column-gutter;

$angle-member-width: $super-number-height;
$angle-member-border: 1px solid $smoke;
$angle-member-radius: $global-radius;
$angle-member-inner-padding: 3px;

$angle-add-member-button-size: $super-number-height * .6;
$angle-add-member-button-color: scale-color($primary-color, $lightness: -$alert-function-factor);
$angle-add-member-avatar-size: $avatar-size-tiny;
$angle-add-member-dropdown-padding: $angle-member-inner-padding * 2;
$angle-add-member-search-icon-padding: $form-spacing / 2;
$angle-add-member-search-icon-height: $form-label-line-height;
$angle-add-member-search-icon-color: $angle-add-member-button-color;

@mixin angle-avatar-input-grid-size {
  @extend %grid-column-medium-3;
  @extend %grid-column-small-6;
}

.project {
  @extend %project-details-header;

  .priority-select {
    display: inline-block;
    margin-left: $column-gutter / 2;

    .dropdown > button {
      margin: 4px 0;
    }
  }

  .angles {
    .angle {
      @extend %project-angle;
    }

    .angle-memberships > ul article {
      @extend %angle-member-input;

      .remove {
        @include button-icon(close);
        @include single-transition(background-color, 100ms, linear);

        border: $angle-member-border;
        border-radius: $global-rounded;
        display: none;
        position: absolute;
        right: 0;
        top: -$super-number-arrow-size / 2;
        z-index: 1;

        &:before {
          line-height: $super-number-arrow-size;
          width: $super-number-arrow-size;
        }

        &:hover {
          background-color: $charcoal;
          color: $white;
        }
      }

      &:hover .remove {
        display: block;
      }
    }
  }

  .add {
    width: auto;
    line-height: $angle-member-width;

    button {
      @extend %angle-member-add-button;
    }

    &.dropdown {
      width: auto;

      ul {
        max-width: none;
        width: auto;

        &:before {
          left: 12px;
        }

        &:after {
          left: 11px;
        }

        li {
          line-height: $angle-add-member-avatar-size;
          white-space: nowrap;

          article {
            padding: $angle-add-member-dropdown-padding $column-gutter / 2;
          }
        }
      }

      img {
        @include detached-border($color: $global-section-border-color);

        display: inline-block;
        height: $angle-add-member-avatar-size;
        margin-right: $column-gutter / 4;
        width: $angle-add-member-avatar-size;
      }

      .team-members {
        max-height: rem-calc(400);
        overflow: scroll;

        .name {
          display: inline;
        }
      }

      .search {
        padding: $angle-member-inner-padding;
        cursor: auto;
        position: relative;

        &:hover {
          background-color: transparent;
        }

        .progress-indicator {
          width: 32px;
          height: 32px;
          overflow: hidden;
          position: absolute;
          top: 3px;
          left: 3px;
          text-align: center;
        }

        i {
          @include icon(search);

          color: $angle-add-member-search-icon-color;
          line-height: 32px;
        }

        input {
          border-radius: $global-radius / 2;
          margin-bottom: 0;
          padding-left: $angle-add-member-avatar-size * 1.5;
          height: 32px;
        }
      }
    }
  }
}

%project-details-header {
  header {
    padding: $project-angle-section-padding;

    h1 {
      display: inline-block;
      margin: 0;
      padding: $column-gutter / 2;
    }

    .stats {
      color: $small-font-color;
      font-size: $small-font-size;
      padding-top: $project-angle-section-padding / 2;
      text-transform: uppercase;

      li {
        display: inline-block;
      }

      .count {
        font-weight: $font-weight-bold;
        padding-left: $column-gutter / 2;
      }
    }
  }
}

%project-angle {
  @extend %grid-row;

  @include clearfix();

  background-color: $project-angle-background-color;
  border-top: $project-angle-border;
  padding: $project-angle-section-padding / 2 $project-angle-section-padding;

  &:last-child {
    border-bottom: 1px solid $project-angle-border-color;
  }

  h1 {
    font-size: $h5-font-size;
    padding-bottom: $project-angle-section-padding / 2;
    padding-left: $column-gutter;
    padding-right: $column-gutter;
  }
}

%angle-member-input {
  @include angle-avatar-input-grid-size;

  position: relative;

  img {
    border-radius: $angle-member-radius;
    box-shadow: none;
    height: $angle-member-width;
    margin: 0;
    overflow: hidden;
    padding: $angle-member-inner-padding;
    position: absolute;
    width: $angle-member-width;
    z-index: 1;
  }

  input {
    border: $angle-member-border;
    border-radius: $angle-member-radius;
    box-sizing: border-box;
    color: $project-angles-text-color;
    font-size: $h2-font-size;
    height: $angle-member-width;
    padding-bottom: 0;
    padding-left: $angle-member-width * 1.2 + $angle-member-inner-padding;
    padding-right: $super-number-arrow-size * 1.2;
    padding-top: 0;
    position: relative;
    width: 100%;

    &:focus {
      outline: none;
    }
  }
}

%angle-member-add-button {
  @include button-icon(plus);

  background-color: $angle-add-member-button-color;
  border-color: darken($angle-add-member-button-color, 5%);
  color: $white;

  &:before {
    line-height: $angle-add-member-button-size;
    width: $angle-add-member-button-size;
  }
}

.actions {
  button {
    &.previous {
      @include button-icon(angle-left);
    }

    &.next {
      @include button-icon(angle-right);
    }
  }
}

